--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 <p>Taunton Model Engineers <a href="http://tauntonme.org.uk" target="_blank">[web]</a></p>
 <p>Bristol Society of Model and Experimental Engineers <a href="http://www.bristolmodelengineers.co.uk" target="_blank">[web]</a></p>
 <p><strong>Downloads - Please Note - </strong>You can download many types of files here - pdf documents, jpg images, spreadsheets and all sorts.</p>
-<p>Groovy Granny Radio test <a href="Groovy Granny/Scorch on Radio Groovy Granny.m4a" target="_blank">[web]</a></p>
+<p>Groovy Granny Radio test <a href="http://jons-workshop.com/Groovy Granny/Scorch on Radio Groovy Granny.m4a" target="_blank">[web]</a></p>
 <br />
 </body>
 </html>
